# rag

./: pyproject.toml  secrets.env
chroma/: chroma.sqlite3
src/rag/: __init__.py  utils.py
