[project]
name = "rag"
version = "0.1.0"
description = ""
authors = [{ name = "SylvanFranklin", email = "sylvanfranklin@icloud.com" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["langchain (>=0.3.19,<0.4.0)", "chromadb (>=0.6.3,<0.7.0)", "langchain-community (>=0.3.18,<0.4.0)", "unstructured (>=0.16.23,<0.17.0)", "langchain-openai (>=0.3.6,<0.4.0)", "langchain-chroma (>=0.2.2,<0.3.0)"]

[tool.poetry]
packages = [{ include = "rag", from = "src" }]
scripts = { "db" = "rag:generate_database", "ask" = "rag.utils:main" }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
